add entry editing
